package com.tboat.models;

public class OtherFactory extends ItemFactory {
    @Override
    public Item createItem(String sellerAccountName, String name,
                           String description, String imageURL) {
        return new OtherItem(sellerAccountName, name, description, imageURL);
    }

    @Override
    public Item createItem() {
        return new OtherItem();
    }
}
